@@ -4,6 +4,8 @@ Released 2.4.45 2017-09-xx
 Changes since 2.4.44:
 
 Lib/
+* Fixed reraising of wrong exception in SimpleLDAPObject._ldap_call()
+  (thanks to Aigars Grins)
 
 Tests/
 * removed work-around in t_cext.py
@@ -1511,4 +1513,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.468 2017/10/09 14:40:48 stroeder Exp $
+$Id: CHANGES,v 1.469 2017/10/09 14:54:10 stroeder Exp $
